--- a/task-github.html
+++ b/task-github.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div class="container shadow-lg position-absolute row">
-        <div class="main-bg position-relative col-5">
+        <div class="main-bg position-relative col-md-5">
             <h5 class="main-head text-white text-center mx-auto pt-5">Social media shared today, tomorrow or by location</h5>
             <img src="Ellipse 2.png" alt="" class="sec1-bg position-absolute">
             <img src="Imgs.png" alt="" class="sec2-bg position-absolute">
         </div>
-        <div class="col-7">
+        <div class="col-md-7">
             <div class="content mx-auto mt-5">
                 <img src="Logo.png" alt="" class="logo">
                 <h5 class="fw-bold mt-5">Create account</h5>
@@ -22,7 +22,7 @@
 
                 <div class="row mt-4">
 
-                    <div class="col-6 bg-white">
+                    <div class="col-6 bg-white ">
                         <label for="#first-name" class="sm-font">First Name</label>
                         <input type="text" id="first-name" class="input border border-light-subtle rounded">
                         <label for="#email" class="sm-font">Email or Phone number</label>
@@ -39,7 +39,7 @@
                             <label for="#ch1" class="sm-font ms-2">I agree to all the <span class="text-primary">terms</span> and <span class="text-primary">Privacy Policy</span></label>
                         </div>
 
-                        <button type="button" class="input xs-font btn btn-primary mt-2">Create Account</button>
+                        <button type="button" class="input xs-font btn-gp btn btn-primary mt-2">Create Account</button>
                     </div>
 
                     <div class="col-6 bg-white">
@@ -52,7 +52,7 @@
 
                         <div class="pass sm-font text-primary ms-auto my-2 pb-1">Forgot Password?</div>
 
-                        <button type="button" class="input btn-bg btn mt-4"></button>
+                        <button type="button" class="input btn-bg btn-gp btn mt-4"></button>
                     </div>
 
                 </div>
